Add details to Who section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@ and the administrator will contact you if we need any extra information.</h4>
 -->
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  This workshop is for Federal Reserve Board data librarians, research 
+  assistants, technology analysts, and other research computing staff involved in
+  economics research.
   <strong>You don't need to have any previous knowledge of the tools that will
     be presented at the workshop.</strong>
 </p>
