Update information about requirements

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@ and the administrator will contact you if we need any extra information.</h4>
   Modify the block below if there are any special requirements.
 -->
 <p id="requirements">
-  <strong>Requirements:</strong> Participants must bring a laptop with a
-  Mac, Linux, or Windows operating system (not a tablet, Chromebook, etc.) that they have administrative privileges
-  on. They should have a few specific software packages installed (listed
-  <a href="#setup">below</a>). They are also required to abide by
-  Software Carpentry's
+  <strong>Requirements:</strong> Participants must register for the 
+  workshop through the Federal Reserve Board's internal systems. 
+  Participants need not bring computers; the venue will have desktop 
+  computers with all necessary software pre-installed. Finally, 
+  participants are required to abide by Software Carpentry's
   <a href="{{site.swc_site}}/conduct.html">Code of Conduct</a>.
 </p>
 
@@ -370,9 +370,11 @@ and the administrator will contact you if we need any extra information.</h4>
 <h2 id="setup">Setup</h2>
 
 <p>
-  To participate in a Software Carpentry workshop, you will need
-  access to the software described below. In addition, you will
-  need an up-to-date web browser.
+  Although this workshop does not require participants to bring 
+  their own computers, if you would like to create a similar 
+  environment on your own machine, you will need the software 
+  described below. In addition, you will need an up-to-date web 
+  browser.
 </p>
 <p>
   We maintain a list of common issues that occur during installation as a reference for instructors
@@ -669,6 +671,7 @@ and the administrator will contact you if we need any extra information.</h4>
         </li>
         <li>
           Close the terminal window.
+        </li>
       </ol>
     </div>
   </div>
